altered css styling to prevent button shift on focus change

--- a/packages/terra-search-field/src/SearchField.module.scss
+++ b/packages/terra-search-field/src/SearchField.module.scss
@@ -1,15 +1,15 @@
 :local {
   .searchfield {
+    border-right: 0;
     display: inline-flex;
     min-width: 0;
     width: var(--terra-search-field-max-width, 15.31em);
 
     .clear {
+      border: var(--terra-search-field-clear-border, 1px solid #dedfe0);
       border-bottom-left-radius: var(--terra-search-field-clear-border-bottom-left-radius, 0);
       border-bottom-right-radius: var(--terra-search-field-clear-border-bottom-right-radius, 0);
-      border-color: var(--terra-search-field-clear-border-color, #dedfe0);
       border-left: var(--terra-search-field-clear-border-left, 0);
-      border-right: var(--terra-search-field-clear-border-right, 1px);
       border-top-left-radius: var(--terra-search-field-clear-border-top-left-radius, 0);
       border-top-right-radius: var(--terra-search-field-clear-border-top-right-radius, 0);
       display: inline-block;
@@ -25,7 +25,7 @@
       background: var(--terra-search-field-clear-icon-background, inline-svg("<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'><path d='M28.2 24L42.9 9.1 40.8 7l-1.7-1.6-.4-.5L24 19.7 9.4 4.9 7.2 7 5.6 8.6l-.5.5L19.8 24 5.1 38.9 7.2 41l1.7 1.6.5.5L24 28.3l14.7 14.8.4-.5 1.7-1.6 2.1-2.1L28.2 24z'/></svg>"));
       display: inline-block;
       height: var(--terra-search-field-clear-icon-height, 1.14286rem);
-      margin-top: var(---terra-search-field-clear-icon-margin-top, -0.214285rem);
+      margin-top: var(--terra-search-field-clear-icon-margin-top, -0.214285rem);
       vertical-align: middle;
       width: var(--terra-search-field-clear-icon-width, 1.14286rem);
     }
@@ -43,16 +43,12 @@
       margin-right: var(--terra-search-field-input-margin-right, 0);
       margin-top: var(--terra-search-field-input-margin-top, 0);
       min-width: 0;
-      outline-offset: -0.143em;  //Adjust the outline offset for search input in Safari.
+      //outline-offset: -0.143em;  //Adjust the outline offset for search input in Safari.
 
       /* stylelint-disable selector-max-compound-selectors */
       // Match focus style and make clear button appear seamless
       &:focus + .clear {
-        border: var(--terra-search-field-input-clear-focus-border, 1px solid #4cb2e9);
-        border-bottom-left-radius: var(--terra-search-field-input-clear-focus-border-bottom-left-radius, 0);
-        border-left: var(--terra-search-field-input-clear-focus-border-left, 0);
-        border-top-left-radius: var(--terra-search-field-input-clear-focus-border-top-left-radius, 0);
-        z-index: 2;
+        border-color: var(--terra-search-field-input-focus-clear-border-color, #4cb2e9);
       }
     }
 
